Fix tag spacing to prevent overlap

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -141,6 +141,8 @@ hr {
 .tags {
   display: flex;
   justify-content: center;
+  column-gap: 10px;
+  row-gap: 10px;
   flex-wrap: wrap;
   list-style: none;
   padding-left: 0;
@@ -157,7 +159,6 @@ hr {
 }
 
 .tag {
-  margin: 0.25em;
   border: dotted 1px #a1a1a1;
   border-radius: 0.5em;
   padding: 0.5em 1em;
